--- a/web/src/web/assets/style.css
+++ b/web/src/web/assets/style.css
@@ -12,20 +12,28 @@ input:invalid {
 #wrapper {
     padding: 10px;
     margin-left: 280px;
-    margin-right: 0px;
+    margin-right: 120px;
 }
 
-@media only screen and (max-width: 1500px) {
+@media only screen and (max-width: 1920px) {
     #toc-navbar {
         display: none;
     }
 
+    #wrapper {
+        margin-left: 250px;
+        margin-right: 80px;
+    }
+}
+
+@media only screen and (max-width: 1500px) {
     #components-navbar {
         display: none;
     }
 
     #wrapper {
-        margin-left: 0;
+        margin-left: 40px;
+        margin-right: 40px;
     }
 
 }
@@ -40,26 +48,36 @@ input:invalid {
     }
 }
 
-.demo-container {
-    display: flex;
-    max-width: 100%;
-    overflow: hidden;
-}
+/*.demo-container {*/
+/*    display: flex;*/
+/*    max-width: 100%;*/
+/*    overflow: hidden;*/
+/*}*/
 
-.demo-preview {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    padding: 20px;
-    justify-content: center;
-}
+/*.demo-preview {*/
+/*    flex: 1;*/
+/*    display: flex;*/
+/*    flex-direction: column;*/
+/*    padding: 20px;*/
+/*    justify-content: center;*/
+/*}*/
 
-.demo-controls {
-    width: 250px;
-    padding: 20px;
-    gap: 10px;
-}
+/*.demo-controls {*/
+/*    width: 250px;*/
+/*    padding: 20px;*/
+/*    gap: 10px;*/
+/*}*/
 
-.demo-control {
-    margin: 10px;
-}
+/*.demo-control {*/
+/*    margin: 10px;*/
+/*}*/
+
+/*@media only screen and (max-width: 750px) {*/
+/*    .demo-container {*/
+/*        flex-direction: column;*/
+/*    }*/
+
+/*    .demo-controls {*/
+/*        width: 100%;*/
+/*    }*/
+/*}*/
